9293 bootadm: empty line between boot entries in menu.lst cause bootadm list-menu to segfault Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Dan McDonald <danmcd@mnx.io>